# stellaris-stats

./: .env.db  .env.graphql-server  .env.stellaris-stats  .env.stellaris-stats.evals  .env.stellaris-stats.tests  .gitignore  .mcp.json  .prettierrc.json  CHAT_SYSTEM_PROMPT.md  CLAUDE.md  apollo-mcp-server.yaml  bunfig.toml  codegen.yml  eslint.config.mjs  package-lock.json  package.json  renovate.json  tsconfig.common.json  tsconfig.json  tsconfig.node.json  tsconfig.src.json  tsconfig.tests.json  tsconfig.types.json
.claude/: settings.json
.devcontainer/: .env.db  .env.db.evals  .env.db.test  .env.grafana  .env.librechat  .env.librechat-metrics  .env.meilisearch  .zshrc  Dockerfile  devcontainer.json  docker-compose.yml  librechat.yaml  post-create-command.sh  prometheus.yml
agent/: pyproject.toml  queries.graphql
agent/scripts/: generate_fixture.py  generate_sql_fixture.py
agent/src/agent/: __init__.py  analysis_config.py  budget_agent.py  cli.py  constants.py  models.py  settings.py  thinking_settings.py  tools.py  validation.py
agent/src/agent/budget/: __init__.py  agent.py  cli.py
agent/src/agent/budget/evals/: __init__.py  cli.py  mock_client.py  runner.py
agent/src/agent/budget/evals/datasets/: __init__.py  stable_budget_balance.py
agent/src/agent/budget/evals/evaluators/: __init__.py  output_quality.py
agent/src/agent/budget_agent/: __init__.py  agent.py  cli.py  models.py  tools.py
agent/src/agent/evals/: __init__.py  cli.py  fixture_loader.py  mock_client.py  mock_graphql_server.py  multi_agent_runner.py  native_budget_agent_runner.py  native_budget_runner.py  neighbor_multi_runner.py  neighbor_single_runner.py  root_cause_multi_agent_runner.py  root_cause_multi_runner.py  root_cause_single_agent_runner.py  root_cause_single_runner.py  runner.py  sandbox_drop_detection_runner.py  sandbox_runner.py  server_manager.py  test_database.py  types.py
agent/src/agent/evals/datasets/: __init__.py  native_budget.py  native_budget_agent.py  neighbor.py  root_cause.py  root_cause_drop_detection.py  sandbox.py  sandbox_drop_detection.py  sandbox_sudden_drop_detection.py  stable_budget_balance.py  sudden_drop_detection.py  sustained_drops.py
agent/src/agent/evals/evaluators/: __init__.py  neighbor_quality.py  output_quality.py
agent/src/agent/evals/fixtures/sql/neighbor_analysis/: basic_detection.sql  genocidal_reputation.sql  high_threat.sql  hostile_neighbor.sql  low_opinion.sql
agent/src/agent/evals/fixtures/sql/sudden_drop_detection/: energy_and_alloys_drop.sql  trade_drop_only.sql
agent/src/agent/evals/fixtures/sudden_drop_detection/: energy_and_alloys_drop.json  trade_drop_only.json
agent/src/agent/evals/fixtures/sustained_drops/: energy_crisis.json  healthy_economy.json  multiple_drops.json
agent/src/agent/graphql_client/: __init__.py  async_base_client.py  client.py  enums.py  exceptions.py  fragments.py  get_budget.py  get_dates.py  get_income_expenses.py  input_types.py  list_saves.py
agent/src/agent/multi_agent/: __init__.py  agent.py  orchestrator.py  root_cause_agent.py  root_cause_prompts.py
agent/src/agent/native_budget/: __init__.py  agent.py
agent/src/agent/native_budget_agent/: __init__.py  agent.py  models.py  tools.py
agent/src/agent/neighbor/: __init__.py  models.py
agent/src/agent/neighbor_analysis/: models.py
agent/src/agent/neighbor_analysis_multi_agent/: models.py  orchestrator.py
agent/src/agent/neighbor_analysis_single_agent/: __init__.py  agent.py
agent/src/agent/neighbor_multi/: __init__.py  models.py  orchestrator.py  prompts.py
agent/src/agent/neighbor_single/: __init__.py  agent.py  prompts.py
agent/src/agent/root_cause_multi/: __init__.py  agent.py  orchestrator.py  prompts.py  root_cause_agent.py  root_cause_prompts.py
agent/src/agent/root_cause_multi_agent/: __init__.py  agent.py  orchestrator.py  prompts.py  root_cause_agent.py  root_cause_prompts.py
agent/src/agent/root_cause_single/: __init__.py  agent.py  prompts.py
agent/src/agent/root_cause_single_agent/: __init__.py  agent.py  prompts.py
agent/src/agent/sandbox/: __init__.py  agent.py
agent/src/agent/sandbox_budget_agent/: __init__.py  agent.py  cli.py  prompts.py
agent/src/agent/sandbox_drop_detection/: __init__.py  agent.py  prompts.py
agent/tests/: conftest.py  test_agent_functions.py  test_error_handling.py  test_evaluators.py  test_fixture_loader.py  test_generate_sql_fixture.py  test_mock_client.py  test_models.py  test_native_budget_agent.py  test_native_budget_agent_tools.py  test_neighbor_analysis_models.py  test_neighbor_evaluators.py  test_neighbor_prompts.py  test_orchestrator.py  test_output_mode.py  test_root_cause_prompts.py  test_sandbox_drop_detection_prompts.py  test_tools.py  test_tools_async.py
docs/: AGENT.md  ARCHITECTURE.md  CACHING.md  LIBRARIES.md  PARSER.md  PLAN-gamestate-api-expansion.md  SANDBOX_HTTP_LIBRARY_ISSUE.md  TESTING.md  UI.md
grafana/: README.md  alloysBudget.json  consumerGoodsBudget.json  empireBudget.json  energyBudget.json  foodBudget.json  mineralsBudget.json  tradeBudget.json  unityBudget.json
graphql/: schema.graphql
migrations/: 1752261106954_create-save-and-gamestate.sql  1752514537381_create-gamestate-date-index.sql  1764964069117_create-budget-entry.sql  1764966260250_populate-budget-tables.sql  1764966260250_populate-budget-tables.ts  1765477123146_add-budget-entry-resources.ts  1767478800001_create-empire.sql  1767478800001_create-planet-coordinate.sql  1767478800002_create-diplomatic-relation.sql  1767478800002_create-empire.sql  1767478800003_create-diplomatic-relation.sql  1767478800003_create-planet-coordinate.sql  1767478800004_create-empire-planet.sql  1767478800004_populate-empire-tables.ts  1767478800005_create-opinion-modifier.sql  1767478800005_populate-diplomatic-relation-tables.ts  1767478800006_populate-planet-coordinate-tables.ts  1767478800006_populate-tables.ts  1767478800007_add-diplomatic-relation-target-index.sql  1767478800008_create-empire-planet.sql  1767478800009_populate-empire-planet.ts  1767478800010_create-opinion-modifier.sql  (+1 more)
src/: db.ts  (+3 more)
(+193 files in other folders)
